--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.0.0",
     "@types/nodemailer": "^6.4.17",
     "framer-motion": "^12.6.5",
     "motion-dom": "^12.6.5",
@@ -16,7 +18,8 @@
     "next": "15.3.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
